syntax = "proto3";

package auth;

option go_package = "./proto/pb";

import "common.proto";

service AuthService {
  rpc ValidateCode(ValidateCodeRequest) returns (ValidateCodeResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (common.User);
}

message ValidateCodeRequest {
  string code = 1;
}

message ValidateCodeResponse {
  common.User user = 1;
  string token = 2;
}

message ValidateTokenRequest {
  string token = 1;
  repeated string requiredRoles = 2;
}
